Fixed height position for carousel left/right buttons to keep them from shifting up and down

--- a/dev/big-picture/big-picture.css
+++ b/dev/big-picture/big-picture.css
@@ -124,7 +124,7 @@ div#header .row .description {
 		padding: 0 0 40px 0;
 	}
 		.carousel-control {
-			top: 87%;	
+			top: 680px;	
 		}
 		.carousel-caption {
 			position: static;
